@@ -11,6 +11,7 @@ linux	git_ssh    	tache	irene-ccrt.ccc.cea.fr		-limited	-TrioCFD					-semi_opt -
 linux	git_ssh  	tache	irene-amd-ccrt-build64.ccc.cea.fr	-limited	-TrioCFD -IJK-FT						-build_64_bit -without-doc						# RedHat 7.6	CEA CCRT
 linux	git_ssh  	tache	irene-ccrt-build64.ccc.cea.fr	-limited	-TrioCFD 						-build_64_bit -without-doc						# RedHat 7.6	CEA CCRT
 linux	git_ssh 	tache	irene-amd-ccrt.ccc.cea.fr	-limited	-TrioCFD					-benchmark	-without-doc									# RedHat 7.6	CEA CCRT
+linux	rsync_ssh	tache	irene-arm-fr.ccc.cea.fr_desactivee		-limited							-without-doc	-without-pdflatex								# RedHat 8.x	CEA CCRT
 linux	git_ssh 	tache	irene-amd-ccrt-gpu.ccc.cea.fr	-limited	-TrioCFD -IJK-FT				-cuda		-without-doc									# RedHat 7.6	CEA CCRT
 linux	rsync_ssh	tache	topaze-build64_desactive.ccc.cea.fr		-limited	-TrioCFD -IJK-FT 				-benchmark	-without-doc -build_64_bit 									# RedHat 8.3	CEA CCRT
 linux	git_ssh 	tache	cobalt.ccc.cea.fr		-limited	-TrioCFD -IJK-FT 				-benchmark	-without-doc									# RedHat 7.6	CEA CCRT
