@@ -72,6 +72,66 @@ d0e8ac1ba562910efde5ecc2436e9e61  Miniconda/local_channel/linux-64/swig-4.0.2-h2
 4dfda1ccfd0cc90c4fe6786acece9a30  Miniconda/local_channel/linux-64/xorg-libice-1.0.10-h516909a_0.tar.bz2
 56cc238b81624db9e3e36b2b6a482cc1  Miniconda/local_channel/linux-64/xorg-libsm-1.2.3-h84519dc_1000.tar.bz2
 d05e94324d0cdd0f8f7c099a1c46199b  Miniconda/local_channel/linux-64/zstd-1.4.5-h9ceee32_0.conda
+c6597bb708170310879896ee9ac51637  Miniconda/local_channel/linux-aarch64/bison-3.7.5-h2531618_1.conda
+9ddfcaef10d79366c90128f5dc444be8  Miniconda/local_channel/linux-aarch64/blas-1.0-openblas.conda
+9303f4af7c004e069bae22bde8d800ee  Miniconda/local_channel/linux-aarch64/bzip2-1.0.8-h7b6447c_0.conda
+2b808c38e5dc9135fcd7f09627aa0941  Miniconda/local_channel/linux-aarch64/ca-certificates-2020.10.14-h06a4308_1.conda
+fcc43d5786127f01e1031137f7cb7190  Miniconda/local_channel/linux-aarch64/cmake-3.18.2-ha30ef3c_0.conda
+48d1b09390e40b3554c5c714a33dd1b5  Miniconda/local_channel/linux-aarch64/cycler-0.10.0-py37_0.conda
+6a6a6f1391f807847404344489ef6cf4  Miniconda/local_channel/linux-aarch64/dbus-1.13.18-hb2f20db_0.conda
+ba5b1fda80a3db1f2e3dd3afbc579fab  Miniconda/local_channel/linux-aarch64/expat-2.3.0-h2531618_2.conda
+8a9eaf084a1ab5f678ca6d602c65e348  Miniconda/local_channel/linux-aarch64/flex-2.6.4-ha10e3a4_1.conda
+fa04e89166d4b44326c6d76e2f708715  Miniconda/local_channel/linux-aarch64/fontconfig-2.13.1-h6c09931_0.conda
+bef0ea8b3abc9d84674733a3ca426865  Miniconda/local_channel/linux-aarch64/freetype-2.10.4-h5ab3b9f_0.conda
+877b1358f7dcf1193e717adc543b2aff  Miniconda/local_channel/linux-aarch64/giflib-5.1.4-h14c3975_1.conda
+ef1fb6ff69666bab3280c8b4846e11a4  Miniconda/local_channel/linux-aarch64/glib-2.68.1-h36276a3_0.conda
+2e73d31066d9abc951ad4fe55e70cb98  Miniconda/local_channel/linux-aarch64/gmp-6.2.1-h2531618_2.conda
+cc62b3fc5bf73f0f14ff68d6c730216f  Miniconda/local_channel/linux-aarch64/gmpy2-2.0.8-py37h10f8cd9_2.conda
+838648422452405b86699e780e293c1d  Miniconda/local_channel/linux-aarch64/gst-plugins-base-1.14.0-h8213a91_2.conda
+6af5d0cbd7310e1cd8a6a5c1c99649b2  Miniconda/local_channel/linux-aarch64/gstreamer-1.14.0-h28cd5cc_2.conda
+48cc14d5ad1a9bcd8dac17211a8deb8b  Miniconda/local_channel/linux-aarch64/icu-58.2-he6710b0_3.conda
+d8f003a909108eaa4a6d898dacb740f8  Miniconda/local_channel/linux-aarch64/jpeg-9b-h024ee3a_2.conda
+0295ac991a681fdb7b60edf03799339c  Miniconda/local_channel/linux-aarch64/kiwisolver-1.3.1-py37h2531618_0.conda
+bdc8a1097a9056bbf908c8d82b1c4d43  Miniconda/local_channel/linux-aarch64/krb5-1.18.2-h173b8e3_0.conda
+719db47afba9f6586eecb5eacac70bff  Miniconda/local_channel/linux-aarch64/lcms2-2.12-h3be6417_0.conda
+d93429a1f4045317512d7aa126015ea5  Miniconda/local_channel/linux-aarch64/libcurl-7.71.1-h20c2e04_1.conda
+7bac75c87b46a4e4979eee41204562a9  Miniconda/local_channel/linux-aarch64/libgd-2.2.5-h0db58fd_3.conda
+e3e10877b7ee2bdd3f67f6d4d4e32e00  Miniconda/local_channel/linux-aarch64/libgfortran-ng-7.3.0-hdf63c60_0.conda
+c8a328b6c15b20d33210bf1e8eae85ff  Miniconda/local_channel/linux-aarch64/libopenblas-0.3.13-h4367d64_0.conda
+689f903925dcf6c5ab7bc1de0f58b67b  Miniconda/local_channel/linux-aarch64/libpng-1.6.37-hbc83047_0.conda
+f20d2c2f77ee95f800cf0e932af216ab  Miniconda/local_channel/linux-aarch64/libssh2-1.9.0-h1ba5d50_1.conda
+cd9a24a8dde03ec0cf0e603b0bea85a1  Miniconda/local_channel/linux-aarch64/libstdcxx-ng-9.3.0-h6de172a_19.tar.bz2
+6c4806c1cf73eefa92deab14c98c6c15  Miniconda/local_channel/linux-aarch64/libtiff-4.1.0-h2733197_1.conda
+39c6326f6ee5297632c47db6520546fe  Miniconda/local_channel/linux-aarch64/libuuid-2.32.1-h14c3975_1000.tar.bz2
+bb1eff3862d3729995c38fc1f5d71ca4  Miniconda/local_channel/linux-aarch64/libuv-1.40.0-h7b6447c_0.conda
+786d06bc5b6374a27553aacab2e48202  Miniconda/local_channel/linux-aarch64/libwebp-1.0.1-h8e7db2f_0.conda
+05811f2f9a9af28f3d7d665dca4d573e  Miniconda/local_channel/linux-aarch64/libxcb-1.14-h7b6447c_0.conda
+5cc9d595a9d91c2f5c1d722252e27343  Miniconda/local_channel/linux-aarch64/libxml2-2.9.10-hb55368b_3.conda
+1c5839d25f73e4067609a257db7d3624  Miniconda/local_channel/linux-aarch64/lz4-c-1.9.3-h2531618_0.conda
+799785dac3c1caa68af0ee04d8ddaaa7  Miniconda/local_channel/linux-aarch64/m4-1.4.18-h4e445db_0.conda
+d610f3eacce8402c5faa61809b26f099  Miniconda/local_channel/linux-aarch64/matplotlib-3.3.4-py37h06a4308_0.conda
+46f701bb43f5e1bebfdc3dd9b3dca66b  Miniconda/local_channel/linux-aarch64/matplotlib-base-3.3.4-py37h62a2d02_0.conda
+a04e160ec0a1117f7638590e534f16c7  Miniconda/local_channel/linux-aarch64/mpc-1.1.0-h10f8cd9_1.conda
+9000a148d49baa5a3b3428397889d37d  Miniconda/local_channel/linux-aarch64/mpfr-4.0.2-hb69a4c5_1.conda
+2d46ee4d7d43ea59667f53b9ef7b8e1a  Miniconda/local_channel/linux-aarch64/mpmath-1.2.1-py37h06a4308_0.conda
+740391f874e19e5f291bf7a025a86329  Miniconda/local_channel/linux-aarch64/nomkl-3.0-0.conda
+abca3dab91fe3b6db8d4f6a090c5b9a9  Miniconda/local_channel/linux-aarch64/numpy-1.20.1-py37h5a90a98_0.conda
+6b75cd5859637a4d2db982de4833f9cd  Miniconda/local_channel/linux-aarch64/numpy-base-1.20.1-py37h34387ca_0.conda
+9a0c0faad20393a813e10c731325eadf  Miniconda/local_channel/linux-aarch64/olefile-0.46-py37_0.conda
+c765c13d62fa029d197c36ab61fc9cde  Miniconda/local_channel/linux-aarch64/pandas-1.2.4-py37h2531618_0.conda
+e337926bb92177a2a3aded95a895470d  Miniconda/local_channel/linux-aarch64/pcre-8.44-he6710b0_0.conda
+1b751499942fd67bd70a541a475810fe  Miniconda/local_channel/linux-aarch64/pillow-8.2.0-py37he98fc37_0.conda
+22e969c53ead5594414fdd72194df83b  Miniconda/local_channel/linux-aarch64/pyqt-5.9.2-py37h05f1152_2.conda
+05507dbc35c46ac5a7066fc860a62341  Miniconda/local_channel/linux-aarch64/qt-5.9.7-h5867ecd_1.conda
+cf7b567eadd2c5868abd252c263ff336  Miniconda/local_channel/linux-aarch64/rhash-1.4.0-h1ba5d50_0.conda
+2f177d935c56763b8a36023cb3da3d5b  Miniconda/local_channel/linux-aarch64/scipy-1.6.2-py37hf56f3a7_1.conda
+a41603290a87146546d40828e3a3848d  Miniconda/local_channel/linux-aarch64/sip-4.19.8-py37hf484d3e_0.conda
+d0e8ac1ba562910efde5ecc2436e9e61  Miniconda/local_channel/linux-aarch64/swig-4.0.2-h2531618_3.conda
+0dc9eb29419e9874d7ea2b224beb5654  Miniconda/local_channel/linux-aarch64/sympy-1.8-py37h06a4308_0.conda
+8a4cd3be1eb57b5e750bd0c62bab8a26  Miniconda/local_channel/linux-aarch64/tornado-6.1-py37h27cfd23_0.conda
+4dfda1ccfd0cc90c4fe6786acece9a30  Miniconda/local_channel/linux-aarch64/xorg-libice-1.0.10-h516909a_0.tar.bz2
+56cc238b81624db9e3e36b2b6a482cc1  Miniconda/local_channel/linux-aarch64/xorg-libsm-1.2.3-h84519dc_1000.tar.bz2
+d05e94324d0cdd0f8f7c099a1c46199b  Miniconda/local_channel/linux-aarch64/zstd-1.4.5-h9ceee32_0.conda
 b4511d563c82fbfb8be42afb8814b144  Miniconda/local_channel/noarch/pyparsing-2.4.7-pyhd3eb1b0_0.tar.bz2
 9d1d5d6ada176b66b5ca6d420e1f414f  Miniconda/local_channel/noarch/python-dateutil-2.8.1-pyhd3eb1b0_0.tar.bz2
 d245638e438fd69fc77153cf96d97830  Miniconda/local_channel/noarch/pytz-2021.1-pyhd3eb1b0_0.conda
