@@ -5,7 +5,12 @@
 export HOST=`hostname | awk -F. '{print $1}'`
 HOST_OLD=$HOST
 [ "${HOST#st[0-9][0-9]}" != $HOST ] && HOST=sagittarius
-[ "${HOST#irene}"        != $HOST ] && HOST=irene-ccrt && [ "`grep AMD /proc/cpuinfo`" ] && HOST=irene-amd-ccrt
+if [ "${HOST#irene}"     != $HOST ]
+then
+   HOST=irene-ccrt
+   [ "`grep AMD /proc/cpuinfo`" ] && HOST=irene-amd-ccrt
+   [ "`uname -m`" = aarch64 ]     && HOST=irene-arm-ccrt
+fi
 [ "${HOST#cobalt}"       != $HOST ] && HOST=cobalt
 [ "${HOST#topaze}"       != $HOST ] && HOST=topaze
 [ "${HOST#wn}"           != $HOST ] && HOST=csp-cssi
